--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -11,6 +11,9 @@ table.table.table-striped
       td = 'Имя'
       td.info_user_small = "#{@user.user_name}"
     tr.info_user
+      td = 'Телефон'
+      td.info_user_small = "#{@user.phone}"
+    tr.info_user
       td = 'Почта'
       td.info_user_small
         p = "#{@user.email}"
